Refactor Code After Code Review

--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -55,10 +55,8 @@ body {
 }
 .page-header {
     text-align: center;
-    width: 90%;
+    width: 100%;
     margin: auto;
-    padding: 2em;
-
 }
 nav {
     background-color: #0A1F4C;
@@ -131,18 +129,18 @@ h3 {
 hr {
     border-top: 1px dashed #000;
     width: 90%;
+    margin: 2em;
 }
 .container {
     width: 660px;
     border: 2px solid black;
-    margin: 2em auto;
+    margin: auto;
     text-align: left;
-    padding-left: 10px;
+    font-size: 0; /* For removing the blank Space */
 }
-
 .box {
-    width: 180px;
-    height: 100px;
+    width: 200px;
+    height: 180px;
     margin: 10px;
     background-color: #DAE0FA;
     display: inline-block;
@@ -150,6 +148,7 @@ hr {
 .with-border {
     border: 2px solid black;
     display: inline-block;
+    box-sizing: border-box;
 }
 
 /* BLOG PAGE STYLE */
